mcabber (0.7.6-dev)

 * 

 -- Mikael, ?

mcabber (0.7.5)

 * History files now use UTF-8 encoding
   See file "NEWS" for an example to convert existing log files
 * UI change: Add two status/info lines
 * Meta keys can be used (and bound to a command)
 * Add Ctrl-left/right to move 1 word backward/forward in the input line
 * Outgoing messages can be colorized
 * The color options names have changed, several colors have been added.
   Bright (bold) colors can be used for the text.
   A theme directory has been created.
 * New "/event" command.
   Subscription requests are not automatically accepted anymore.
 * New IQ system, for Jabber IQ request
 * Add "/request time|version" commands
 * Add "/roster hide|show|toggle" commands
   This allows having a full-width chat window.
 * Group names are now case sensitive
 * Add "--enable-hgcset" option to the ./configure script, for people using
   the Mercurial repository.  If used, the /version command will display
   the Mercurial changeset.
 * We try to display as many roster items as possible in the buddylist
 * New "beep_on_message" option
 * New "eventcmd_checkstatus" option
 * New "roster_width" option
 * Improved English messages (thanks to Philip M. White)
 * Fix a small issue with resources containing uppercase chars in /status_to
 * Fix iq:time handling: really return UTC time when answering a request
 * Sync libjabber with upstream
 * A lot of small bugfixes
 * Documentation updates

 -- Mikael, 2006-04-03

mcabber (0.7.4)

 * Fix a segfault when reconnecting to the server or rejoining a room
 * Fix a segfault when a group and a contact have the same name

 -- Mikael, 2006-01-17

mcabber (0.7.3)

 * Fix a segfault when a resource contains non-representable chars
 * Fix an UTF-8 encoding issue when joining a room
 * Fix an eventcmd issue
 * Chat Mode is automatically enabled when some commands are entered
   ("/info", "/room names", "/room whois")
 * Messages can be sent to agents